# wordnet_autotranslate-

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  ANNOTATION_EXCEL_FORMAT_SUGGESTIONS.md  CODE_REFACTORING_REPORT.md  CODE_SUMMARY_AND_IMPROVEMENTS.md  COMPOUND_DEDUPLICATION.md  CROSS_LINGUISTIC_WORDNET_ALIGNMENT.md  DEMO_EXECUTIVE_SUMMARY.md  DEMO_QUICK_SUMMARY.md  DEMO_RESULTS_AND_CONCLUSIONS.md  DOCUMENT_CLEANUP_SUMMARY.md  EXPANSION_PROMPT_IMPROVEMENT.md  FILTERING_PROMPT_IMPROVEMENT.md  FULL_LOG_ACCESS_GUIDE.md  GRAPH_VISUALIZATION_README.md  GRAPH_VISUALIZATION_SUMMARY.md  GUI_README.md  ITERATIVE_EXPANSION_FEATURE.md  LOG_MANAGEMENT_SUMMARY.md  PASS1_DEMO_ANALYSIS_OLD_PROMPTS.md  PASS1_VS_PASS2_COMPARISON.md  PASS1_VS_PASS2_VS_PASS3_VS_PASS4_COMPARISON.md  PASS2_DEMO_RESULTS_NEW_PROMPTS.md  PASS3_DEMO_RESULTS_CALIBRATED_PROMPTS.md  PASS4_DEMO_RESULTS_POLYSEMY_AWARE.md  POS_DEFINITION_STRUCTURE_CORRECTION_SUGGESTIONS.md  QUICK_REF_LOGS.md  QUICK_REF_SYNSETS.md  README.md  REFACTORING_SUMMARY.md  SCHEMA_VALIDATION_INTEGRATION.md  SECURITY.md  TEST_COVERAGE_REPORT.md  WORDNET_SYNSET_ANALYSIS.md  XML_FILE_SETUP.md  config.yaml  demo_functionality.py  demo_gui.html  (+15 more)
docs/: integration_guide.md  nwo_format.md
examples/: README.md  serbian_english_synset_pairs_enhanced.json
notebooks/: 01_introduction.ipynb  02_langgraph_pipeline_demo.ipynb  02_langgraph_pipeline_demo_refactored.ipynb  03_langchain_baseline_pipeline.ipynb  simple_translation_output.json
scripts/: demo_deduplication.py  export_clean_translation_workbook.py  export_workbook_synset_lists.py  manage_native_translation_batch.py  prepare_native_translation_batch.py  resolve_synset_selector.py  run_agent_mode_100_synsets.py  run_repo_translation_batch.py  translate_synset_sheet.py  translate_synset_workflow.py
tests/: __init__.py  test_baseline_translation_pipeline.py  test_basic.py  test_gui_optional_deps.py  test_import_export.py  test_integration.py  test_integrations.py  test_langchain_base_pipeline.py  test_langgraph_pipeline.py  test_llm_factory.py  test_native_translation_queue.py  test_nwo_support.py  test_prompt_guidance.py  test_run_repo_translation_batch.py  test_selector_validation.py  test_sheet_translation_workflow.py  test_synset_handler.py  (+4 more)
(+101 files in other folders)
